--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9"
+    "mongoose": "^8.9.2",
+    "nodemon": "^3.1.9",
+    "uniqid": "^5.4.0"
   }
 }
