--- a/FrontEnd_MockInterview/package.json
+++ b/FrontEnd_MockInterview/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
-    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.4",
