--- a/FrontEnd_MockInterview/package.json
+++ b/FrontEnd_MockInterview/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.54.2",
     "react-hook-speech-to-text": "^0.8.0",
     "react-router": "^7.1.0",
+    "react-speech-recognition": "^4.0.1",
     "react-webcam": "^7.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
